changed some minor frontmatter text to all articles

--- a/a-team-effort-of-love.mdx
+++ b/a-team-effort-of-love.mdx
@@ -7,7 +7,7 @@ licensing, and permitting? The NEPA has been a blessing for 50 years because it 
 projects to realize their impacts on the environment, and be held accountable. It was developed
 to avoid, minimize, and mitigate/lessen our impacts upon Earth’s air, water and soil."
 categories: ["Ecological-Education"]
-cover_image: "./images/a-team-effort-of-love.jpg"
+image: "/images/a-team-effort-of-love.jpg"
 lat_lng: [38.9072, -77.0369 ]
 news_category: "Our Planet Earth Article"
 ---
