--- a/biodiversity.mdx
+++ b/biodiversity.mdx
@@ -8,7 +8,7 @@ production with humans altering over 70% of all ice-free land? When land is conv
 development, animals and plants lose their habitat. We, as stewards and ambassadors of planet Earth, need to avoid
 destroying natural habitats."
 categories: ["Community-Involvement"]
-cover_image: "./images/biodiversity.jpg"
+image: "/images/biodiversity.jpg"
 lat_lng: [3.4653, -62.2159]
 news_category: "Our Planet Earth Article"
 ---
