--- a/cry-of-the-poor.mdx
+++ b/cry-of-the-poor.mdx
@@ -6,10 +6,16 @@ excerpt: "
 money? Well, many people have －which makes them vulnerable, anxious, and in dire need of help. Many poor
 people even need to migrate to new countries and find new places to live."
 categories: ["Cry-of-the-Poor"]
-cover_image: "./images/cry-of-the-poor.png"
+image: "/images/cry-of-the-poor.png"
 lat_lng: [26.2063, -98.1851]
 news_category: "Our Planet Earth Article"
 ---
+
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/cry-of-the-poor.png"
+  alt="Man sitting on bench with hungry sign next to him."
+  priority={true}
+/>
 
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed. M.S.
 
@@ -59,15 +65,7 @@ collectively help society. Be aware of these assets, and welcome the poor to wor
 value in society. They are your brothers and sisters, and many are simply asking for a path to citizenship and
 conveyance of rights like our forefathers were given in the early part of the 20 th century.
 
-<iframe
-  width="800"
-  height="500"
-  src="https://www.youtube.com/embed/Pwe_bd0TUjk?si=RKNuy9ViLgeH8dBU"
-  title="YouTube video player"
-  frameborder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-  allowfullscreen
-></iframe>
+<Video id="Pwe_bd0TUjk?si=RKNuy9ViLgeH8dBU" />
 
 **Quote:**
 
