--- a/earth-day-and-the-catholic-church.mdx
+++ b/earth-day-and-the-catholic-church.mdx
@@ -7,7 +7,7 @@ Earth Day. It’s estimated that 20 million people participated in this event, a
 Day, Adirondack Council.” The first two websites under “What can we do!” give ideas for Earth Day on April
 22, 2023."
 categories: ["Ecological-Education"]
-cover_image: "./images/earth-day-and-the-catholic-church.jpg"
+image: "/images/earth-day-and-the-catholic-church.jpg"
 lat_lng: [43.7844, -88.7879]
 news_category: "Our Planet Earth Article"
 ---
