--- a/earth’s-atmosphere.mdx
+++ b/earth’s-atmosphere.mdx
@@ -7,7 +7,7 @@ very thin. Do you know it’s our atmosphere that contains oxygen for us to brea
 security blanket protecting us from ultraviolet rays? If we had no atmosphere, there would be no
 life. The atmosphere even allows us to hear."
 categories: ["Cry-of-the-Poor"]
-cover_image: "./images/earth’s-atmosphere.jpg"
+image: "/images/earth’s-atmosphere.jpg"
 lat_lng: [31.3452, -104.5124 ]
 news_category: "Our Planet Earth Article"
 ---
