--- a/global-warming-and-climate-change.mdx
+++ b/global-warming-and-climate-change.mdx
@@ -6,7 +6,7 @@ many ecological principles. But there’s more, such as melting of the Earth’s
 of glaciers and icebergs; and a reduction in albedo (reflectivity of the sun’s rays) by snow
 covered areas in the world."
 categories: ["Cry-of-the-Poor"]
-cover_image: "./images/global-warming-and-climate-change.jpg"
+image: "/images/global-warming-and-climate-change.jpg"
 lat_lng: [40.7128, -74.0060 ]
 news_category: "Our Planet Earth Article"
 ---
