--- a/good-news-about-pope-francis-laudato-si.mdx
+++ b/good-news-about-pope-francis-laudato-si.mdx
@@ -6,7 +6,7 @@ urged world leaders to act. The science is unequivocal, they write. A global inc
 above the pre-industrial average and the continued loss of biodiversity risk catastrophic harm to
 health” (Amy McKeever, National Geographic, 9/9/21)."
 categories: ["Community-Involvement"]
-cover_image: "./images/good-news-about-pope-francis-laudato-si.jpg"
+image: "/images/good-news-about-pope-francis-laudato-si.jpg"
 lat_lng: [55.8714, -4.2546]
 news_category: "Our Planet Earth Article"
 ---
