--- a/grasslands-pollinators-and-our-health.mdx
+++ b/grasslands-pollinators-and-our-health.mdx
@@ -7,7 +7,7 @@ America, pampas; in Central Eurasia, steppes; and in Africa, savannas. What they
 common are perennial, bunch grasses (little bluestem, big bluestem, Indiangrass) and
 wildflowers (milkweed, coneflowers, sunflowers)."
 categories: ["Ecological-Economics"]
-cover_image: "./images/grasslands-pollinators-and-our-health.jpg"
+image: "/images/grasslands-pollinators-and-our-health.jpg"
 lat_lng: [40.5121, -88.9948]
 news_category: "Our Planet Earth Article"
 ---
