--- a/healthy-soils-reduce-flooding-global-warming-and-run-off.mdx
+++ b/healthy-soils-reduce-flooding-global-warming-and-run-off.mdx
@@ -6,7 +6,7 @@ Did you know that, through years of soil degradation, nitrogen, phosphorus and s
 run off into rivers that enter the Mississippi River creating a dead zone in the Gulf of Mexico the
 size of New Jersey (The Gulf of Mexico Dead Zone - SERC – Carleton, 10/15/2019)?"
 categories: ["Cry-of-the-Earth"]
-cover_image: "./images/healthy-soils-reduce-flooding-global-warming-and-run-off.jpg"
+image: "/images/healthy-soils-reduce-flooding-global-warming-and-run-off.jpg"
 lat_lng: [28.7950, -91.1058]
 news_category: "Our Planet Earth Article"
 ---
