--- a/how-do-droughts-affect-people.mdx
+++ b/how-do-droughts-affect-people.mdx
@@ -9,7 +9,7 @@ USA for United Nations High Commissioner for Refugees , more than 4.2 million pe
 across the region; 3.7 million people have been internally displaced; and more than 10 million children are in
 need of humanitarian assistance. Climate change could bring about even more consequences."
 categories: ["Cry-of-the-Poor"]
-cover_image: "./images/how-do-droughts-affect-people.jpg"
+image: "/images/how-do-droughts-affect-people.jpg"
 lat_lng: [19.0643, 13.5437]
 news_category: "Our Planet Earth Article"
 ---
