--- a/living-smart.mdx
+++ b/living-smart.mdx
@@ -7,7 +7,7 @@ this issue, the Inflation Reduction Act was signed into law by President Joe Bid
 National Aeronautics and Space Administrator Bill Nelson says, “The science is clear. We must act now to
 protect our communities and planet; it’s the only one we have.”"
 categories: ["Simple-Lifestyles"]
-cover_image: "./images/living-smart.jpg"
+image: "/images/living-smart.jpg"
 lat_lng: [60.1282, 18.6435 ]
 news_category: "Our Planet Earth Article"
 ---
