--- a/new-year-resolution-register-in-laudato-si-action-platform-a-global-community.mdx
+++ b/new-year-resolution-register-in-laudato-si-action-platform-a-global-community.mdx
@@ -6,7 +6,7 @@ Did you know that you can register in the Laudato Si’ Action Platform (LSAP) a
 action(s) to help our planet earth? This is a pro-active, and very much needed response that follows the seven
 goals of Pope Francis for his assigned seven commitment groups"
 categories: ["Community-Involvement"]
-cover_image: "./images/new-year-resolution-register-in-laudato-si-action-platform-a-global-community.jpeg"
+image: "/images/new-year-resolution-register-in-laudato-si-action-platform-a-global-community.jpeg"
 lat_lng: [41.8719, 12.5674]
 news_category: "Our Planet Earth Article"
 ---
