--- a/oceans-coastlines-and-the-great-lakes.mdx
+++ b/oceans-coastlines-and-the-great-lakes.mdx
@@ -8,7 +8,7 @@ as the Indiana Dunes National Lakeshore, and re-designated as the nation&#39;s 6
 Feb 15, 2019. Oceans, coastlines and the Great Lakes need protection because they are God’s
 gifts for our enjoyment and survival, and they affect people throughout the world."
 categories: ["Ecological-Economics"]
-cover_image: "./images/oceans-coastlines-and-the-great-lakes.jpg"
+image: "/images/oceans-coastlines-and-the-great-lakes.jpg"
 lat_lng: [32.7158, -79.7893]
 news_category: "Our Planet Earth Article"
 ---
