--- a/only-you-can-prevent-wildfires.mdx
+++ b/only-you-can-prevent-wildfires.mdx
@@ -7,7 +7,7 @@ lightning? Human-caused fires result from campfires left unattended, burning of 
 malfunctions, negligently discarded cigarettes and intentional acts of arson (National Park Service, Wildfire
 Causes and Evaluations). Smokey Bear’s fire prevention message today is, “Only you can prevent wildfires.”"
 categories: ["Ecological-Education"]
-cover_image: "./images/only-you-can-prevent-wildfires.jpg"
+image: "/images/only-you-can-prevent-wildfires.jpg"
 lat_lng: [39.4075, -120.3591]
 news_category: "Our Planet Earth Article"
 ---
