--- a/pollution-waste-and-a-throwaway-culture.mdx
+++ b/pollution-waste-and-a-throwaway-culture.mdx
@@ -8,7 +8,7 @@ absorb heat, and increase air and ocean temperatures resulting in global warming
 warming ― warmer temperatures, melting glaciers, and increasing sea levels ― that causes
 climate change, which forces people and animals from their homes."
 categories: ["Simple-Lifestyles"]
-cover_image: "./images/pollution-waste-and-a-throwaway-culture.jpg"
+image: "/images/pollution-waste-and-a-throwaway-culture.jpg"
 lat_lng: [-8.4095, 115.1889]
 news_category: "Our Planet Earth Article"
 ---
