--- a/praise-be-to-you-my-lord.mdx
+++ b/praise-be-to-you-my-lord.mdx
@@ -8,7 +8,7 @@ day-a-year event on Earth Day. It should be a daily requirement of our faith acc
 Conference of Catholic Bishops, which says that, in that requirement, 'We show our respect for the Creator by
 our stewardship in protecting people and the planet, and to live our relationship with all of God’s creation.'"
 categories: ["Ecological-Economics"]
-cover_image: "./images/praise-be-to-you-my-lord.jpg"
+image: "/images/praise-be-to-you-my-lord.jpg"
 lat_lng: [-33.4883, 149.5350]
 news_category: "Our Planet Earth Article"
 ---
