--- a/rethink-reduce-reuse-recycle-restore.mdx
+++ b/rethink-reduce-reuse-recycle-restore.mdx
@@ -6,7 +6,7 @@ There are simple and economic ways to live an environmentally sensitive and thou
 we could rethink, reduce, reuse, recycle and restore. Applying these five R’s will reduce our carbon footprint,
 promote healthy environments, increase soil fertility, and improve Earth’s air, water, and land."
 categories: ["Simple-Lifestyles"]
-cover_image: "./images/rethink-reduce-reuse-recycle-restore.jpg"
+image: "/images/rethink-reduce-reuse-recycle-restore.jpg"
 lat_lng: [52.5226, 13.3796]
 news_category: "Our Planet Earth Article"
 ---
