--- a/sanctuaries-in-nature.mdx
+++ b/sanctuaries-in-nature.mdx
@@ -6,7 +6,7 @@ we have three National Wildlife Refuges – Muscatatuck, Patoka River and Big Oa
 Kentucky, there are two in our region – Green River and Clarks River. Also, we have many other
 parks, preserves, and natural areas."
 categories: ["Simple-Lifestyles"]
-cover_image: "./images/sanctuaries-in-nature.jpg"
+image: "/images/sanctuaries-in-nature.jpg"
 lat_lng: [38.3837, -87.3254]
 news_category: "Our Planet Earth Article"
 ---
