--- a/save-the-dirt.mdx
+++ b/save-the-dirt.mdx
@@ -9,7 +9,7 @@ Commission, 5/22/08). Soils with high biodiversity can be noisy (Ute Eberle, 2/9
 soil was thought to be silent. What if it isn’t? Living World). Franklin D. Roosevelt said, “A
 nation that destroys its soil, destroys itself.”"
 categories: ["Cry-of-the-Earth"]
-cover_image: "./images/save-the-dirt.jpg"
+image: "/images/save-the-dirt.jpg"
 lat_lng: [53.3963, 62.9093]
 news_category: "Our Planet Earth Article"
 ---
