--- a/seventh-anniversary-of-laudato-si.mdx
+++ b/seventh-anniversary-of-laudato-si.mdx
@@ -7,7 +7,7 @@ really increasing?” Compared with a decade ago, more Americans say protecting 
 and dealing with global climate change should be top priorities (PEW Research Center, Funk and
 Kennedy, How Americans see climate change and the environment in seven charts, 4/21/20)."
 categories: ["Community-Involvement"]
-cover_image: "./images/seventh-anniversary-of-laudato-si.jpg"
+image: "/images/seventh-anniversary-of-laudato-si.jpg"
 lat_lng: [14.5995, 120.9842]
 news_category: "Our Planet Earth Article"
 ---
