--- a/species-of-greatest-conservation-need.mdx
+++ b/species-of-greatest-conservation-need.mdx
@@ -9,7 +9,7 @@ the No. 1 cause for loss of species? For example, in the Amazon, the world’s l
 biodiversity, two-thirds of the species have lost habitat to fire and deforestation (Georgina
 Gustin, 9/1/2021, Inside Climate News)."
 categories: ["Ecological-Spirituality"]
-cover_image: "./images/species-of-greatest-conservation-need.jpg"
+image: "/images/species-of-greatest-conservation-need.jpg"
 lat_lng: [38.9232, -87.0194]
 news_category: "Our Planet Earth Article"
 ---
