--- a/spirituality.mdx
+++ b/spirituality.mdx
@@ -7,7 +7,7 @@ of Psychiatrists goes on to say, “Our lives have significance in a context bey
 at the level of biological needs, and knowing that we are a significant part of a purposeful unfolding of life in
 our universe.”"
 categories: ["Ecological-Spirituality"]
-cover_image: "./images/spirituality.jpg"
+image: "/images/spirituality.jpg"
 lat_lng: [3.4653, 62.2159]
 news_category: "Our Planet Earth Article"
 ---
