--- a/ten-eco-commandments-for-earth-citizens.mdx
+++ b/ten-eco-commandments-for-earth-citizens.mdx
@@ -6,7 +6,7 @@ driven and more eco-friendly. It has promoted “Laudato Si’” to all people 
 requested by Pope Francis - including through his “Ten Commandments for Climate Change” (See What can we
 do section)."
 categories: ["Simple-Lifestyles"]
-cover_image: "./images/ten-eco-commandments-for-earth-citizens.jpg"
+image: "/images/ten-eco-commandments-for-earth-citizens.jpg"
 lat_lng: [48.8566, 2.3522]
 news_category: "Our Planet Earth Article"
 ---
