--- a/the-importance-of-biodiversity.mdx
+++ b/the-importance-of-biodiversity.mdx
@@ -9,7 +9,7 @@ and biodiversity holds a treasure of genes that can offer many possibilities, es
 Scientific American). So, we urge you to take to heart Pope Francis’ wisdom in his Chapter 1:
 Loss of Biodiversity."
 categories: ["Cry-of-the-Earth"]
-cover_image: "./images/the-importance-of-biodiversity.jpg"
+image: "/images/the-importance-of-biodiversity.jpg"
 lat_lng: [45.2538, -69.4455]
 news_category: "Our Planet Earth Article"
 ---
