--- a/the-most-efficient-ecosystems-for-carbon-storage.mdx
+++ b/the-most-efficient-ecosystems-for-carbon-storage.mdx
@@ -7,7 +7,7 @@ hope of avoiding radical changes in the climate and catastrophes. We have just a
 roughly fewer than 30 – to drastically reduce the emissions of gas and the greenhouse effect in the atmosphere.”
 (Pope Francis in TED talk: Earth cannot be squeezed ‘like an orange,’ Vatican City, 10/10/20)."
 categories: ["Cry-of-the-Earth"]
-cover_image: "./images/the-most-efficient-ecosystems-for-carbon-storage.jpg"
+image: "/images/the-most-efficient-ecosystems-for-carbon-storage.jpg"
 lat_lng: [25.2997, -81.1538]
 news_category: "Our Planet Earth Article"
 ---
