--- a/the-sun.mdx
+++ b/the-sun.mdx
@@ -7,7 +7,7 @@ mph, and rotates on its axis, at the equator at 1,000 mph. In addition, the sun 
 and helium, 93 million miles from earth, and its volume would need 1.3 million earths to fill it (National
 Aeronautics and Space Administration)."
 categories: ["Ecological-Education"]
-cover_image: "./images/the-sun.jpg"
+image: "/images/the-sun.jpg"
 lat_lng: [33.4024, -8.9286 ]
 news_category: "Our Planet Earth Article"
 ---
