--- a/united-states-conference-of-catholic-bishops-address-care-for-creation.mdx
+++ b/united-states-conference-of-catholic-bishops-address-care-for-creation.mdx
@@ -12,7 +12,7 @@ meet the Paris Agreement goals to reduce carbon emissions by 50% by 2030. Jose A
 Executive Director of Catholic Climate Covenant says, “such actions will be a civilizational
 game-changer.”"
 categories: ["Ecological-Spirituality"]
-cover_image: "./images/united-states-conference-of-catholic-bishops-address-care-for-creation.jpg"
+image: "/images/united-states-conference-of-catholic-bishops-address-care-for-creation.jpg"
 lat_lng: [32.7157, -117.1611]
 news_category: "Our Planet Earth Article"
 ---
