--- a/a-jubilee-for-the-earth.mdx
+++ b/a-jubilee-for-the-earth.mdx
@@ -6,7 +6,7 @@ Home “Laudato Si’?” An encyclical is one of the highest forms of communica
 usually deals with some aspect of Catholic teaching. “Laudato Si’” is an appeal for “every person
 living on this planet” to enter into dialogue with him on the future of our Mother Earth."
 categories: ["Ecological-Spirituality"]
-cover_image: "./images/a-jubilee-for-the-earth.jpg"
+image: "/images/a-jubilee-for-the-earth.jpg"
 lat_lng: [38.9273, -114.2645]
 news_category: "Our Planet Earth Article"
 ---
