--- a/bees-butterflies-and-earthworms.mdx
+++ b/bees-butterflies-and-earthworms.mdx
@@ -7,7 +7,7 @@ lyrics could easily become, “Where have all the bees, butterflies and earthwor
 animals may be considered sentinel species used to detect risks to humans, very much like a
 canary sent into a coal mine. If it died, that was an early warning."
 categories: ["Ecological-Education"]
-cover_image: "./images/bees-butterflies-and-earthworms.jpg"
+image: "/images/bees-butterflies-and-earthworms.jpg"
 lat_lng: [19.4326, -99.1332 ]
 news_category: "Our Planet Earth Article"
 ---
