--- a/carbon-neutrality.mdx
+++ b/carbon-neutrality.mdx
@@ -7,7 +7,7 @@ cause climate change by trapping heat, and have far-ranging environmental and he
 (National Geographic, Carbon dioxide levels are at a record high. Here’s what you need to know.
 Christina Nunez, 5/13/19). A simple way to help Our Mother Earth is to become carbon neutral."
 categories: ["Cry-of-the-Earth"]
-cover_image: "./images/carbon-neutrality.jpg"
+image: "/images/carbon-neutrality.jpg"
 lat_lng: [37.9715, -87.5715 ]
 news_category: "Our Planet Earth Article"
 ---
