--- a/do-trees-make-you-healthier.mdx
+++ b/do-trees-make-you-healthier.mdx
@@ -7,7 +7,7 @@ Louisville with 8,000 trees. Trees, shrubs and other plants will be placed where
 soak up lung-damaging pollution (James Bruggers, 10/26/17, Courier Journal). Trees give us
 oxygen to breathe; shade; sequester carbon dioxide from the atmosphere; and filter pollutants."
 categories: ["Ecological-Education"]
-cover_image: "./images/do-trees-make-you-healthier.jpg"
+image: "/images/do-trees-make-you-healthier.jpg"
 lat_lng: [38.2527, -85.7585]
 news_category: "Our Planet Earth Article"
 ---
