--- a/pope-francis-calls-us-to-action-on-ecological-issues.mdx
+++ b/pope-francis-calls-us-to-action-on-ecological-issues.mdx
@@ -8,7 +8,7 @@ May 24, 2020, to May 24, 2021, where he encourages a new way of living. During t
 Anniversary Year, Pope Francis established seven public commitment groups and seven platform
 goals."
 categories: ["Cry-of-the-Poor"]
-cover_image: "./images/pope-francis-calls-us-to-action-on-ecological-issues.jpg"
+image: "/images/pope-francis-calls-us-to-action-on-ecological-issues.jpg"
 lat_lng: [41.9028, 12.4964]
 news_category: "Our Planet Earth Article"
 ---
