--- a/righting-wrongs-through-legislation.mdx
+++ b/righting-wrongs-through-legislation.mdx
@@ -6,7 +6,7 @@ Historically, we’ve learned much about righting wrongs to promote environmenta
 authors are Aldo Leopold (“A Sand County Almanac”) and Rachel Carson (“Silent Spring”). Both were helpful
 in passing legislation like:"
 categories: ["Ecological-Education"]
-cover_image: "./images/righting-wrongs-through-legislation.jpg"
+image: "/images/righting-wrongs-through-legislation.jpg"
 lat_lng: [45.5019, -73.5674]
 news_category: "Our Planet Earth Article"
 ---
