--- a/the-value-of-forests-and-trees.mdx
+++ b/the-value-of-forests-and-trees.mdx
@@ -7,7 +7,7 @@ forests made up less than 7% (Sam Carman, IDNR, Div. of Forestry)? Also, did you
 city neighborhoods have few, if any trees? We urge you to take to heart Pope Francis’ wisdom
 and his love for trees – and the blessings they give us."
 categories: ["Ecological-Economics"]
-cover_image: "./images/the-value-of-forests-and-trees.jpg"
+image: "/images/the-value-of-forests-and-trees.jpg"
 lat_lng: [38.8375, -120.8958]
 news_category: "Our Planet Earth Article"
 ---
