--- a/water-quality-wisdom-and-our-commitment-for-a-greener-and-healthier-world.mdx
+++ b/water-quality-wisdom-and-our-commitment-for-a-greener-and-healthier-world.mdx
@@ -8,7 +8,7 @@ lead poisoning and many diseases. So why are our waterways and oceans being poll
 urge you to take to heart Pope Francis’ wisdom in his Chapter 1: The Issue of Water. Our Mother
 Earth needs our help in stopping water unbalances, water shortages, and water pollution."
 categories: ["Cry-of-the-Earth"]
-cover_image: "./images/water-quality-wisdom-and-our-commitment-for-a-greener-and-healthier-world.jpg"
+image: "/images/water-quality-wisdom-and-our-commitment-for-a-greener-and-healthier-world.jpg"
 lat_lng: [39.1031, -84.5120]
 news_category: "Our Planet Earth Article"
 ---
